buck-out/log/2022-03-06_19h49m04s_buildcommand_88a16c40-e0e9-4cc7-9e55-d29aefa56449/simple_console.log
PARSING BUCK FILES: FINISHED IN 1.0s
CREATING ACTION GRAPH: FINISHED IN 0.1s
BUILT 6/10 JOBS 0.0s //:cg#default,preprocessor-deps
src/canvas.cpp:40:8: error: no member named 'cout' in namespace 'std'
  std::cout << path << std::endl;
  ~~~~~^
src/canvas.cpp:40:29: error: no member named 'endl' in namespace 'std'
  std::cout << path << std::endl;
                       ~~~~~^
2 errors generated.
BUILT 10/9 JOBS 3.6s //:cg#compile-main.cpp.o4b91d1f7,default
DOWNLOADED 0 ARTIFACTS, 0.00 BYTES, 100.0% CACHE MISS
BUILDING: FINISHED IN 4.6s 10/9 JOBS, 5 UPDATED

Top slow rules
    //:cg: 4.0s
    //lib/libbmp:libbmp: 0.0s
    //lib/boost_1_78_0:boost: 0.0s
BUILD FAILED
Command failed with exit code 1.

command: [/usr/bin/clang++, @/Users/barjimal/Code/cpp/cg/buck-out/bin/cg#compile-canvas.cpp.o90b2484d,default/ppandcompile.argsfile]

stderr: src/canvas.cpp:40:8: error: no member named 'cout' in namespace 'std'
  std::cout << path << std::endl;
  ~~~~~^
src/canvas.cpp:40:29: error: no member named 'endl' in namespace 'std'
  std::cout << path << std::endl;
                       ~~~~~^
2 errors generated.
    When running <c++ preprocess_and_compile>.
    When building rule //:cg#compile-canvas.cpp.o90b2484d,default.
